@@ -1,4 +1,13 @@
 
+Изменения в nginx 1.22.1                                          19.10.2022
+
+    *) Безопасность: обработка специально созданного mp4-файла модулем
+       ngx_http_mp4_module могла приводить к падению рабочего процесса,
+       отправке клиенту части содержимого памяти рабочего процесса, а также
+       потенциально могла иметь другие последствия (CVE-2022-41741,
+       CVE-2022-41742).
+
+
 Изменения в nginx 1.22.0                                          24.05.2022
 
     *) Стабильная ветка 1.22.x.
